[gd_scene load_steps=6 format=3 uid="uid://dc2wbwumamy40"]

[ext_resource type="Script" path="res://scripts/main_screen.gd" id="1_ywyvh"]
[ext_resource type="Texture2D" uid="uid://de66buqmg0y4o" path="res://graphics/backgrounds/Background.png" id="2_wc0qp"]
[ext_resource type="FontFile" uid="uid://ctoins8y01jnt" path="res://graphics/fonts/FutureMillennium Italic.ttf" id="3_nwq1g"]
[ext_resource type="FontFile" uid="uid://q0ai3wfelumn" path="res://graphics/fonts/FutureMillennium.ttf" id="4_3bnj4"]
[ext_resource type="PackedScene" uid="uid://1mka5jp12ppe" path="res://scenes/options_screen/options_screen.tscn" id="5_eb152"]

[node name="main_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_ywyvh")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wc0qp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="controls" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/controls"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_nwq1g")
theme_override_font_sizes/font_size = 250
text = "Jo-Zeas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="start_button" type="Button" parent="MarginContainer/controls"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_3bnj4")
theme_override_font_sizes/font_size = 40
text = "COMECE ESSA PORRA"

[node name="options_button" type="Button" parent="MarginContainer/controls"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_3bnj4")
theme_override_font_sizes/font_size = 40
text = "OPTIONS NESSA PORRA"

[node name="quit_button" type="Button" parent="MarginContainer/controls"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_3bnj4")
theme_override_font_sizes/font_size = 40
text = "SAIR DESSA PORRA"

[node name="options_screen" parent="." instance=ExtResource("5_eb152")]
layout_mode = 1
